# gyndol

./: Cargo.toml
doc/: Makefile  gyndol-riffol-nereond.adoc
doc/models/: gyndol-riffol-nereond.wsd
src/: config.rs  lib.rs  main.rs  nos
src/command/: fileset.rs  mod.rs
